[gd_scene load_steps=16 format=3 uid="uid://jwiagnrnjrmf"]

[ext_resource type="Script" path="res://Scripts/Pot.gd" id="1_btvh5"]
[ext_resource type="Texture2D" uid="uid://ddtgcn4y4dly5" path="res://Images/paso.png" id="1_toblf"]
[ext_resource type="Texture2D" uid="uid://bagv2u5pkwkkm" path="res://Images/Sprite-0004.png" id="3_l5m6d"]
[ext_resource type="Texture2D" uid="uid://dbxefmoy2tn11" path="res://Images/paso_carried.png" id="3_rfhgt"]
[ext_resource type="Texture2D" uid="uid://6wcad0cjwm4v" path="res://Images/Sprite-0004_withshadow.png" id="4_g4mlb"]
[ext_resource type="AudioStream" uid="uid://cy03peeb15335" path="res://Audio/Audio_Always_Loaded.073.ogg" id="4_svcu3"]
[ext_resource type="AudioStream" uid="uid://73v5lrku1455" path="res://Audio/Audio_Always_Loaded.069.ogg" id="5_pcn2r"]

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_bps56"]
polygon = PackedVector2Array(-100, -99, -94, -99, -88, -96, -64, -92, -29, -88, 20, -85, 77, -90, 92, -94, 103, -99, 109, -81, 100, -76, 86, -34, -86, -40, -93, -75, -102, -83)

[sub_resource type="Gradient" id="Gradient_2ejo6"]
colors = PackedColorArray(1, 0.783, 0.07, 1, 1, 0.886432, 0.716935, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_y27tg"]
gradient = SubResource("Gradient_2ejo6")
width = 5
height = 5
fill_from = Vector2(0, 1)
fill_to = Vector2(0, 0)

[sub_resource type="Curve" id="Curve_pshym"]
min_value = -200.0
max_value = 200.0
_data = [Vector2(0, -200), 0.0, 560.0, 0, 0, Vector2(1, 200), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_7plit"]
max_value = 200.0
_data = [Vector2(0, 200), 0.0, 22.0483, 0, 0, Vector2(1, 1), -642.609, 0.0, 0, 0]
point_count = 2

[sub_resource type="Environment" id="Environment_bqhtj"]
glow_enabled = true
glow_normalized = true

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_07r7d"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cpeu6"]
size = Vector2(86, 162)

[node name="Pot" type="RigidBody2D" groups=["Pot", "pickable"]]
z_index = 1
position = Vector2(-4, 43)
collision_layer = 2
collision_mask = 4
input_pickable = true
mass = 100.0
can_sleep = false
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("1_btvh5")

[node name="TextureRect_old" type="TextureRect" parent="."]
visible = false
modulate = Color(0.803922, 0.803922, 0.752941, 1)
offset_left = -150.0
offset_top = -83.0
offset_right = 158.0
offset_bottom = 90.0
mouse_default_cursor_shape = 7
texture = ExtResource("1_toblf")
expand_mode = 3
stretch_mode = 4

[node name="pot_picked" type="TextureRect" parent="."]
modulate = Color(0.803922, 0.803922, 0.752941, 1)
z_index = 1
offset_left = -250.0
offset_top = -484.0
offset_right = 58.0
offset_bottom = -311.0
scale = Vector2(4, 4)
mouse_default_cursor_shape = 7
texture = ExtResource("3_l5m6d")
expand_mode = 3
stretch_mode = 4

[node name="pot_onfloor" type="TextureRect" parent="."]
modulate = Color(0.803922, 0.803922, 0.752941, 1)
z_index = 1
offset_left = -100.0
offset_top = -40.0
offset_right = -43.6364
offset_bottom = -10.0
scale = Vector2(4, 4)
mouse_default_cursor_shape = 7
texture = ExtResource("4_g4mlb")
expand_mode = 3
stretch_mode = 4

[node name="pot_picked_old" type="TextureRect" parent="."]
visible = false
modulate = Color(0.803922, 0.803922, 0.752941, 1)
offset_left = -160.0
offset_top = -83.0
offset_right = 148.0
offset_bottom = 90.0
scale = Vector2(1.05, 1.05)
mouse_default_cursor_shape = 7
texture = ExtResource("3_rfhgt")
expand_mode = 3
stretch_mode = 4

[node name="hold_timer" type="Timer" parent="."]
wait_time = 500.0

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
z_index = -1
position = Vector2(3, 83)
scale = Vector2(0.76, 1)
occluder = SubResource("OccluderPolygon2D_bps56")

[node name="pot_picked2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_svcu3")

[node name="pot_dropped" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_pcn2r")

[node name="plant_position" type="Marker2D" parent="."]
position = Vector2(0, -32)

[node name="absorb_particles" type="CPUParticles2D" parent="."]
z_index = 1
position = Vector2(4, -31)
emitting = false
amount = 100
lifetime = 0.75
one_shot = true
randomness = 0.09
texture = SubResource("GradientTexture2D_y27tg")
emission_shape = 3
emission_rect_extents = Vector2(30, 10)
direction = Vector2(0, -1)
spread = 6.85
gravity = Vector2(0, -100)
initial_velocity_max = 83.34
linear_accel_curve = SubResource("Curve_pshym")
anim_speed_curve = SubResource("Curve_7plit")

[node name="WorldEnvironment" type="WorldEnvironment" parent="absorb_particles"]
environment = SubResource("Environment_bqhtj")
camera_attributes = SubResource("CameraAttributesPractical_07r7d")

[node name="PlantPosition" type="Marker2D" parent="."]
position = Vector2(4, -29)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(6.99998, 22)
rotation = 1.5708
shape = SubResource("RectangleShape2D_cpeu6")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="mouse_exited" from="TextureRect_old" to="." method="_on_texture_rect_mouse_exited"]
[connection signal="mouse_exited" from="pot_picked" to="." method="_on_texture_rect_mouse_exited"]
[connection signal="mouse_exited" from="pot_onfloor" to="." method="_on_texture_rect_mouse_exited"]
[connection signal="mouse_exited" from="pot_picked_old" to="." method="_on_texture_rect_mouse_exited"]
